# Motobot_v2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  settings.py
models/: create_model_motohours.py
models/motohours/: model.py
